MM correction ortograph

--- a/views/characters/nute_gunray.html
+++ b/views/characters/nute_gunray.html
@@ -67,7 +67,7 @@
               </tr>
               <tr>
                 <th>Côté de la force :</th>
-                <td>Côté obscur</td>
+                <td>Obscur</td>
               </tr>
             </table>
           </div>
@@ -90,11 +90,11 @@
             >
             du <a href="../characters/compte_dooku.html">comte Dooku</a>, le
             second apprenti de Dark Sidious, et assiste au commencement de la
-            guerre des clones à Géonosis dans
+            guerre des clones à <a href="../planets/geonosis.html">Géonosis</a> dans
             <a href="../movies/movie2.html">L'Attaque des clones</a>. Il est
             enfin tué dans
             <a href="../movies/movie3.html">La Revanche des Sith</a> à la fin de
-            cette guerre à Mustafar, lorsque le nouvel apprenti de Dark Sidious,
+            cette guerre à <a href="../planets/mustafar.html">Mustafar</a>, lorsque le nouvel apprenti de Dark Sidious,
             <a href="../characters/anakin_skywalker.html">Dark Vador</a>, est
             envoyé par son maître massacrer les dirigeants
             <a href="../corporations/conseil_separatiste.html">séparatistes</a>.
@@ -110,7 +110,7 @@
             autre que le sénateur
             <a href="../characters/palpatine.html">Palpatine</a> de Naboo) en 32
             av. BY. Le Sith manipule alors Gunray pour l'amener à superviser le
-            blocus de Naboo illégalaent. Le neimodien envoie ensuite son armée
+            blocus de Naboo illégalement. Le neimodien envoie ensuite son armée
             envahir Naboo. Nute Gunray décide d'orchestrer le blocus de Naboo
             lorsqu'il apprend que le
             <a href="../corporations/senat_galactique.html">Sénat</a> décide de
@@ -137,7 +137,7 @@
             Dark Vador arrive. Il tue alors tous les membres. Nute Gunray est la
             dernière victime du massacre. Alors qu'il s'attend depuis le début
             de son partenariat avec Dark Sidious à un titre respectable dans
-            l'Empire galactique que ce dernier s'apprête à fonder, Dark Sidious
+            l'<a href="../corporations/empire_galactique.html">Empire galactique</a> que ce dernier s'apprête à fonder, Dark Sidious
             le trahit ainsi en le faisant tuer.
           </p>
         </div>
