--- a/views/characters/qui_gon_jinn.html
+++ b/views/characters/qui_gon_jinn.html
@@ -17,7 +17,7 @@
           <div class="histoire">
             <h1>Qui-Gon Jinn</h1>
             <p>
-              Avant <a href="../movies/movie1.html">La Menace Fantôme</a>,
+              Avant <a href="../movies/movie1.html">La Menace fantôme</a>,
               Qui-Gon Jinn est natif de
               <a href="../planets/coruscant.html">Coruscant</a> où il est
               recueilli très jeune par les
@@ -45,7 +45,7 @@
               </tr>
               <tr>
                 <th>Race :</th>
-                <td>Humain</td>
+                <td>Être humain</td>
               </tr>
               <tr>
                 <th>Genre :</th>
@@ -119,7 +119,7 @@
           </p>
           <p>
             En 19 av. BY, après avoir mis en œuvre la grande purge Jedi, il
-            s'autoproclame apereur devant le
+            s'autoproclame empereur devant le
             <a href="../corporations/senat_galactique.html">Sénat</a>, et
             transforme la
             <a href="../corporations/republique_galactique.html">République</a>
