--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index personnages </title>
+    <link rel="stylesheet" href="../../css/styles.css" />
+    <title>Index personnages</title>
 </head>
 
 <body class="">
@@ -14,67 +15,67 @@
     </header>
 
    
-        <h1>les personnages de la trilogie</h1>
+        <h1>Les personnages de la trilogie</h1>
 
         <div class="list">
 
-            <h2>personnages récurent de la trilogie</h2>
+            <h2>Personnages récurrent de la trilogie</h2>
 
             <div class="anakin card">
                 <a href="#">
                     <img
                         src="../../images/characters/image_centpx/anna_skywalker_resultatredimensionner.webp"
                         alt="">
-                        <p>anakin</p>
+                        <p>Anakin</p>
                 </a>
                 
             </div>
                         
             <div class="palpatine card" ><a href="#"><img
                         src="../../images/characters/image_centpx/empereur_palpatine_resultatredimensionner.webp"
-                        alt=""><p> générale palpatine</p></a>
+                        alt=""><p>Général Palpatine</p></a>
             </div>
             <div class="amidala card"><a href="#"><img
                         src="../../images/characters/image_centpx/padme_admidala_resultatredimensionner.webp"
-                        alt=""><p>amidala</p></a></div>
+                        alt=""><p>Amidala</p></a></div>
             <div class="obiwan card"><a href="#"><img
                         src="../../images/characters/image_centpx/hobi_wan_resultatredimensionner.jpg" 
-                        alt=""><p>obiwan ken obi</p></a></div>
+                        alt=""><p>Obi-wan Kenobi</p></a></div>
             <div class="mace card"><a href="#"><img
                         src="../../images/characters/image_centpx/mace_windu_resultatredimensionner.jpg" 
                         alt=""
-                        width="50px">mace windu</a></div>
+                        width="50px">Mace Windu</a></div>
         </div>
 
 
 
         <div class="list">
-            <h2>Les protagonistes apparu dans la menace fantome</h2>
+            <h2>Les protagonistes apparu dans La Menace Fantôme</h2>
 
 
             <div class="valorum card"><a href="#"><img
                         src="../../images/characters/image_centpx/finis_valorum_resultatredimensionner.jpg" alt="">
-               <p>valorum</p> </a></div>
+               <p>Valorum</p> </a></div>
 
             <div class="gunray card"><a href="#"><img
                         src="../../images/characters/image_centpx/nute_gunray_resultatredimensionner.webp" alt="">
-                <p>nute gunray</p></a></div>
+                <p>Nute Gunray</p></a></div>
 
             <div class="qui card"><a href="#"><img
                     src="../../images/characters/image_centpx/qui-gon_jinn_resultatredimensionner.webp" alt="">
-               <p>qui gon jinn</p> </a></div>
+               <p>Qui Gon Jinn</p> </a></div>
 
             <div class="boss card"><a href="#"><img
                         src="../../images/characters/image_centpx/rugor_nass_resultatredimensionner.webp" alt="">
-                <p>boss nas</p></a></div>
+                <p>Boss Nass</p></a></div>
 
             <div class="jar card"><a href="#"><img
                         src="../../images/characters/image_centpx/jarjar-bink_resultatredimensionner.jpg" alt="">
-                <p>Jar jar bink</p></a></div>
+                <p>Jar Jar Binks</p></a></div>
 
             <div class="ki card"><a href="#"><img
                     src="../../images/characters/image_centpx/ki_di_mundi_resultatredimensionner.webp" alt="">
-            <p>ki di mundi</p</a>></div>
+            <p>Ki Adi Mundi</p</a>></div>
 
             <div class="yoda  card"><a href="#"><img
                         src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
@@ -82,85 +83,85 @@
 
             <div class="dark card"><a href="#"><img
                         src="../../images/characters/image_centpx/dark_maul_resultatredimensionner.webp" alt="">
-               <p>Dark maul</p> </a></div>
+               <p>Dark Maul</p> </a></div>
 
             <div class="shmi card"><a href="#"><img
                         src="../../images/characters/image_centpx/shmi_skywalker_resultatredimensionner.webp" alt="">
-                <p>shmi skywalker</p></a></div>
+                <p>Shmi Skywalker</p></a></div>
 
             <div class="watto card"><a href="#"><img
                         src="../../images/characters/image_centpx/watto_resultatredimensionner.webp" alt="">
-               <p>watto</p> </a></div>
+               <p>Watto</p> </a></div>
 
             <div class="sio card"><a href="#"><img
                         src="../../images/characters/image_centpx/sio_bibble_resultatredimensionner.jpg" alt="">
-                </a></div>
+                </a>Sio Bibble</div>
 
             <div class="c3po card"><a href="#"><img
                         src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="">
-                <p>C3po</p></a></div>
+                <p>C-3po</p></a></div>
 
             <div class="r2d2" card><a href="#"><img
                         src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
-                <p>R2d2</p></a></div>
+                <p>R2-D2</p></a></div>
 
             <div class="tanaka card"><a href=""><img
                         src="../../images/characters/image_centpx/captain_tanaka_resultatredimensionner.jpg" alt="">
-                <p>Captain tanaka</p></a></div>
+                <p>Captain Panaka</p></a></div>
 
         </div>
 
 
 
         <div class="list">
-            <h2>Les protagonistes apparu dans l'attaque des clones </h2>
+            <h2>Les protagonistes apparus dans L'Attaque des Clones </h2>
 
             <div class="compte card"><a href="#"><img
                         src="../../images/characters/image_centpx/compte_dooku_resultatredimensionner.webp" alt="">
-                <p>compte doku</p></a></div>
+                <p>Comte Dooku</p></a></div>
 
             <div class="zam card"><a href="#"><img
                         src="../../images/characters/image_centpx/zam_wesell_resultatredimensionner.jpg" alt="">
-                <p>Zam wesell</p></a></div>
+                <p>Zam Wesell</p></a></div>
 
             <div class="poggle  card"><a href="#"><img
                         src="../../images/characters/image_centpx/poggle_bataille_resultatredimensionner.jpg" alt="">
-                <p>poogle</p></a></div>
+                <p>Poggle le Bref</p></a></div>
 
             <div class="boba card"><a href="#"><img
                         src="../../images/characters/image_centpx/boba_fett_resultatredimensionner.webp" alt="">
-                <p>boba fett</p></a></div>
+                <p>Boba Fett</p></a></div>
 
             <div class="jango card"><a href="#"><img
                         src="../../images/characters/image_centpx/jango._fett_resultatredimensionner.webp" alt="">
-                <p>Jango</p></a></div>
+                <p>Jango Fett</p></a></div>
 
             <div class="tawn card"><a href="#"><img
                         src="../../images/characters/image_centpx/tawn_me_resultatredimensionner.jpg" alt="">
-                <p>Tawn me</p></a></div>
+                <p>Taun Me</p></a></div>
 
             <div class="dexter card"><a href="#"><img
                         src="../../images/characters/image_centpx/Dexter_resultatredimensionner.webp" alt="">
-               <p>Dexter</p></a></div>
+               <p>Dexter Jettster</p></a></div>
 
             <div class="typho" card><a href="#"><img
                         src="../../images/characters/image_centpx/gregar_typho_resultatredimensionner.webp" alt="">
-               <p>Gregar typho</p></a></div>
+               <p>Gregar Typho</p></a></div>
 
         </div>
 
 
         <div class="list">
-            <h2>Les protagonistes apparu dans la revanches des shits </h2>
+            <h2>Les protagonistes apparus dans La Revanches des Siths </h2>
 
 
             <div class="c3po card"><a href="#"><img
                         src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="">
-                <p>C3po</p></a></div>
+                <p>C-3po</p></a></div>
 
             <div class="r2d2 card"><a href="#"><img
                         src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
-                <p>R2d2</p></a</div>
+                <p>R2-D2</p></a</div>
 
             <div class="yoda card"><a href="#"><img
                         src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
@@ -168,7 +169,7 @@
 
             <div class="grievous card"><a href="#"><img
                         src="../../images/characters/image_centpx/Grievoushead_resultatredimensionner.webp" alt="">
-               <p>Generale grievous</p> </a></div>
+               <p>Général Grievous</p> </a></div>
 
             <div class="chewbacca card"><a href="#"><img
                         src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" alt="">
@@ -176,19 +177,12 @@
 
             <div class="tarfull card"><a
                     href="#"><img src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" alt="">
-               <p>Tartfull</p> </a></div>
+               <p>Tarrful</p> </a></div>
 
             <div class="organa card"><a href="#"><img
                         src="../../images/characters/image_centpx/organa_resultatredimensionner.jpg" alt="">
-                   <p>Organa</p> </a></div>
-
-
-
+                   <p>Bail Organa</p> </a></div>
         </div>
-
-
-
-   
     <footer>
         <iframe src="../../views/footer.html" frameborder="0"></iframe>
     </footer>
