--- a/views/characters/boss_nass.html
+++ b/views/characters/boss_nass.html
@@ -64,7 +64,7 @@
               </tr>
               <tr>
                 <th>Côté de la force :</th>
-                <td>Côté lumineux</td>
+                <td>Lumineux</td>
               </tr>
             </table>
           </div>
