--- a/views/characters/compte_dooku.html
+++ b/views/characters/compte_dooku.html
@@ -73,7 +73,7 @@
               </tr>
               <tr>
                 <th>Côté de la force :</th>
-                <td>Côté lumineux puis obscur</td>
+                <td>Lumineux puis obscur</td>
               </tr>
             </table>
           </div>
