--- a/views/characters/dark_maul.html
+++ b/views/characters/dark_maul.html
@@ -51,7 +51,7 @@
                             </tr>
                             <tr>
                                 <th>Côté de la force :</th>
-                                <td>Côté obscur</td>
+                                <td>Obscur</td>
                             </tr>
                         </table>
                     </div>
