--- a/views/characters/gregar_typho.html
+++ b/views/characters/gregar_typho.html
@@ -43,7 +43,7 @@
 							</tr>
 							<tr>
 								<th>Race :</th>
-								<td>Humain</td>
+								<td>Être humain</td>
 							</tr>
 							<tr>
 								<th>Genre :</th>
