--- a/views/characters/palpatine.html
+++ b/views/characters/palpatine.html
@@ -73,7 +73,7 @@
               </tr>
               <tr>
                 <th>Côté de la force :</th>
-                <td>obscur</td>
+                <td>Obscur</td>
               </tr>
             </table>
           </div>
