--- a/views/characters/panaka.html
+++ b/views/characters/panaka.html
@@ -48,7 +48,7 @@
               </tr>
               <tr>
                 <th>Race:</th>
-                <td>Humain</td>
+                <td>Être humain</td>
               </tr>
               <tr>
                 <th>Genre:</th>
@@ -64,7 +64,7 @@
               </tr>
               <tr>
                 <th>Côté de la Force:</th>
-                <td>Lumière</td>
+                <td>Lumineux</td>
               </tr>
             </table>
           </div>
