--- a/views/characters/taun_we.html
+++ b/views/characters/taun_we.html
@@ -37,7 +37,7 @@
                         </tr>
                         <tr>
                             <th>Race :</th>
-                            <td>Kaminoene</td>
+                            <td><a href="../planets/kamino.html">Kaminoene</a></td>
                         </tr>
                         <tr>
                             <th>Genre :</th>
