--- a/views/forms/inscription.html
+++ b/views/forms/inscription.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Formulaire d'Inscription</title>
+    <title>Formulaire d'inscription</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='.css'>
 </head>
@@ -11,7 +11,7 @@
     <header>
         <iframe src="../../views/header.html" frameborder="0"></iframe>
     </header>
-    <h1>Formulaire d'Inscription</h1>
+    <h1>Formulaire d'inscription</h1>
     <div class="container">
         <div class="inscrire">
             <h1>Vos informations:</h1>
