--- a/views/characters/finis_valorum.html
+++ b/views/characters/finis_valorum.html
@@ -51,7 +51,7 @@
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
-								<td>Côté lumineux</td>
+								<td>Lumineux</td>
 							</tr>
 						</table>
                     </div>
