--- a/views/characters/mace_windu.html
+++ b/views/characters/mace_windu.html
@@ -49,7 +49,7 @@
                             </tr>
                             <tr>
                                 <th>Côté de la force :</th>
-                                <td>Côté lumineux</td>
+                                <td>Lumineux</td>
                             </tr>
 						</table>
                     </div>
