--- a/views/characters/obi-wan_kenobi.html
+++ b/views/characters/obi-wan_kenobi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../css/styles.css">
     <title>Obi-wan kenobi</title>
     <link
       rel="stylesheet"
@@ -48,7 +49,7 @@
               </tr>
               <tr>
                 <th>Race :</th>
-                <td>Humain</td>
+                <td>Être humain</td>
               </tr>
               <tr>
                 <th>Genre :</th>
@@ -64,7 +65,7 @@
               </tr>
               <tr>
                 <th>Côté de la force :</th>
-                <td>Côté lumineux</td>
+                <td>Lumineux</td>
               </tr>
             </table>
           </div>
