--- a/views/characters/padme_amidala.html
+++ b/views/characters/padme_amidala.html
@@ -66,7 +66,7 @@
               </tr>
               <tr>
                 <th>Côté de la force :</th>
-                <td>Côté lumineux</td>
+                <td>Lumineux</td>
               </tr>
             </table>
           </div>
