--- a/views/characters/qui_gon_jinn.html
+++ b/views/characters/qui_gon_jinn.html
@@ -61,7 +61,7 @@
               </tr>
               <tr>
                 <th>Côté de la force :</th>
-                <td>Côté lumineux</td>
+                <td>Lumineux</td>
               </tr>
             </table>
           </div>
