--- a/views/characters/shmi_skywalker.html
+++ b/views/characters/shmi_skywalker.html
@@ -50,7 +50,7 @@
               </tr>
               <tr>
                 <th>Race:</th>
-                <td>Humain</td>
+                <td>Être humain</td>
               </tr>
               <tr>
                 <th>Genre:</th>
