--- a/views/characters/yoda.html
+++ b/views/characters/yoda.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="../../css/styles.css">
 	<title>Yoda</title>
 </head>
 
@@ -40,7 +41,7 @@
 						</tr>
 						<tr>
 							<th>Race :</th>
-							<td>Race de Yoda</td>
+							<td>Inconnue</td>
 						</tr>
 						<tr>
 							<th>Genre :</th>
@@ -56,7 +57,7 @@
 						</tr>
 						<tr>
 							<th>Côté de la force :</th>
-							<td>Côté lumineux</td>
+							<td>Lumineux</td>
 						</tr>
 					</table>
 				</div>
