--- a/views/characters/zam_wesell.html
+++ b/views/characters/zam_wesell.html
@@ -65,7 +65,7 @@
               </tr>
               <tr>
                 <th>Côté de la force :</th>
-                <td>Côté obscur</td>
+                <td>Obscur</td>
               </tr>
             </table>
           </div>
