--- a/views/planets/index.html
+++ b/views/planets/index.html
@@ -12,7 +12,7 @@
         <iframe src="../header.html" frameborder="0"></iframe>
     </header>
     <main>
-        <div class="maquette-haut">
+        <div class="maquette">
             <div class="alderaan">
                 <a href="../planets/alderaan.html"><img src="../../images/planets/alderaan.jpg"/>Alderaan</a>
             </div>
@@ -28,8 +28,6 @@
             <div class="kashyyyk">
                 <a href="../planets/kashyyk.html"><img src="../../images/planets/kashyyyk.jpg"/>Kashyyyk</a>
             </div>
-        </div>
-        <div class="maquette-bas">
             <div class="mustafar">
                 <a href="../planets/mustafar.html"><img src="../../images/planets/mustafar.jpg"/>Mustafar</a>
             </div>
