--- a/views/header.html
+++ b/views/header.html
@@ -9,7 +9,7 @@
 				<a href="index.html" target="_parent"><img src="../images/logo.png" width="100px" height="50px" /></a>
 				<a href="index.html" target="_parent">Films</a>
 				<a href="characters/index.html" target="_parent">Personnages</a>
-				<a href="planets/" target="_parent">Planètes</a>
+				<a href="planets/index.html" target="_parent">Planètes</a>
 				<a href="corporations/index.html" target="_parent">Corporations</a>
 				<a href="forms/contact.html" target="_parent">Contact</a>
 			</div>
