--- a/views/index.html
+++ b/views/index.html
@@ -13,13 +13,13 @@
     </header>
     <main class="accueil">
         <div class="left">
-            <a href="" class="lien"><img class="film" src="../images/movies/poster1.jpg"/>Film 1: La Menace Fantôme</a>
-        </div>
+            <a href="movies/movie1.html" class="lien"> <img class="film" src="../images/movies/poster1.jpg"/>Film 1: La Menace Fantôme</a>
+        </a></div>
         <div class="center">
-            <a href="" class="lien"><img class="film" src="../images/movies/poster2.jpg"/>Film 2: L'attaque des clones</a>
-        </div>
+            <a href="movies/movie2.html" class="lien"><img class="film" src="../images/movies/poster2.jpg"/>Film 2: L'attaque des clones</a>
+        </a></div>
         <div class="right">
-            <a href="" class="lien"><img class="film" src="../images/movies/poster3.jpg"/>Film 3: La Revanche des Siths</a>
+            <a href="movies/movie3.html" class="lien"><img class="film" src="../images/movies/poster3.jpg"/>Film 3: La Revanche des Siths</a>
         </div>
     </main>
     <footer>
