--- a/views/corporations/index.html
+++ b/views/corporations/index.html
@@ -1,76 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../css/styles.css" />
     <title>Corporation</title>
-</head>
+  </head>
 
-<body>
-    <h1>Les corporations</h1>
-    <div class="card">
-        <h2> Le cartel hutt </h2>
-        <a href="cartel_hutt.html"><img src="../../images/corporations/cartelhutt.jpg" alt=""></a>
-    </div>
+  <body>
+    <header>
+      <iframe src="../../views/header.html" frameborder="0"></iframe>
+    </header>
+    <main>
+      <h1>Les corporations</h1>
+      <div class="card">
+        <h2>Le cartel hutt</h2>
+        <a href="cartel_hutt.html"
+          ><img src="../../images/corporations/cartelhutt.jpg" alt=""
+        /></a>
+      </div>
 
-    <div class="card">
+      <div class="card">
         <h2>Le conseil séparatiste</h2>
-        <a href="../../views/corporations/conseil_separatiste.html"><img
-                src="../../images/corporations/conseil_separatiste.jpg" alt=""></a>
-    </div>
+        <a href="../../views/corporations/conseil_separatiste.html"
+          ><img src="../../images/corporations/conseil_separatiste.jpg" alt=""
+        /></a>
+      </div>
 
-    <div class="card">
+      <div class="card">
         <h2>L'empire galactique</h2>
-        <a href="../../views/corporations/empire_galactique.html"><img
-                src="../../images/corporations/empire_galactique.jpg" alt=""></a>
+        <a href="../../views/corporations/empire_galactique.html"
+          ><img src="../../images/corporations/empire_galactique.jpg" alt=""
+        /></a>
+      </div>
 
-    </div>
-
-    <div class="card">
+      <div class="card">
         <h2>La fédération du commerce</h2>
-        <a href="../../views/corporations/federation_du_commerce.html"><img
-                src="../../images/corporations/federation_du_commerce.jpg" alt=""></a>
-    </div>
+        <a href="../../views/corporations/federation_du_commerce.html"
+          ><img
+            src="../../images/corporations/federation_du_commerce.jpg"
+            alt=""
+        /></a>
+      </div>
 
-    <div class="card">
+      <div class="card">
         <h2>Le haut conseil Gungan</h2>
         <a href="../../views/corporations/haut_conseil_gungan.html">
-            <img src="../../images/corporations/haut_conseil_gungan.jpg" alt="">
+          <img src="../../images/corporations/haut_conseil_gungan.jpg" alt="" />
         </a>
-    </div>
+      </div>
 
-    <div class="card">
-        <h2>L'ordre jedi </h2>
+      <div class="card">
+        <h2>L'ordre jedi</h2>
         <a href="../../views/corporations/jedi.html">
-            <img src="../../images/corporations/jedi.jpg" alt="">
+          <img src="../../images/corporations/jedi.jpg" alt="" />
         </a>
-    </div>
+      </div>
 
-    <div class="card">
+      <div class="card">
         <h2>République galactique</h2>
         <a href="../../views/corporations/republique_galactique.html">
-            <img src="../../images/corporations/republique_galactique.jpg" alt="">
+          <img
+            src="../../images/corporations/republique_galactique.jpg"
+            alt=""
+          />
         </a>
-    </div>
+      </div>
 
-    <div class="card">
+      <div class="card">
         <h2>Senat galactique</h2>
         <a href="../../views/corporations/senat_galactique.html">
-            <img src="../../images/corporations/senat_galactique.jpg" alt="">
+          <img src="../../images/corporations/senat_galactique.jpg" alt="" />
         </a>
-    </div>
+      </div>
 
-    <div class="card"> <a href="../../views/corporations/sith.html">
-        <img src="../../images/corporations/siths.jpg" alt="">
-    </a></div>
+      <div class="card">
+        <a href="../../views/corporations/sith.html">
+          <img src="../../images/corporations/siths.jpg" alt="" />
+        </a>
+      </div>
+    </main>
 
-
-
-
-
-</body>
-
+    <footer>
+      <iframe src="../../views/footer.html" frameborder="0"></iframe>
+    </footer>
+  </body>
 </html>
