--- a/views/footer.html
+++ b/views/footer.html
@@ -6,7 +6,7 @@
 	<body>
 		<footer>
 			<div class="pied">
-				<a href="movies/index.html" target="_parent">Films</a>
+				<a href="index.html" target="_parent">Films</a>
 				<a href="characters/index.html" target="_parent">Personnages</a>
 				<a href="planets/index.html" target="_parent">Planètes</a>
 				<a href="corporations/index.html" target="_parent">Corporations</a>
