--- a/views/header.html
+++ b/views/header.html
@@ -14,8 +14,8 @@
 				<a href="forms/contact.html" target="_parent">Contact</a>
 			</div>
 			<div class="droite">
-				<a class="btn" href="forms/inscription.html">Inscription</a>
-				<a class="btn" href="forms/connexion.html">Connexion</a>
+				<a class="btn" href="forms/inscription.html" target="_parent">Inscription</a>
+				<a class="btn" href="forms/connexion.html" target="_parent">Connexion</a>
 			</div>
 		</header>
 	</body>
