corrected bug characters

--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -37,14 +37,16 @@
             </div>
             <div class="amidala card"><a href="#"><img
                         src="../../images/characters/image_centpx/padme_admidala_resultatredimensionner.webp"
-                        alt=""><p>Amidala</p></a></div>
+                        alt=""><p>Amidala</p></a>
+            </div>
             <div class="obiwan card"><a href="#"><img
                         src="../../images/characters/image_centpx/hobi_wan_resultatredimensionner.jpg" 
-                        alt=""><p>Obi-wan Kenobi</p></a></div>
+                        alt=""><p>Obi-wan Kenobi</p></a>
+            </div>
             <div class="mace card"><a href="#"><img
                         src="../../images/characters/image_centpx/mace_windu_resultatredimensionner.jpg" 
-                        alt=""
-                        width="50px">Mace Windu</a></div>
+                        alt="" width="50px"><p>Mace Windu</p></a>
+            </div>
         </div>
 
 
@@ -95,7 +97,7 @@
 
             <div class="sio card"><a href="#"><img
                         src="../../images/characters/image_centpx/sio_bibble_resultatredimensionner.jpg" alt="">
-                </a>Sio Bibble</div>
+                <p>Sio Bibble</p></a></div>
 
             <div class="c3po card"><a href="#"><img
                         src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="">
