--- a/views/characters/obi-wan_kenobi.html
+++ b/views/characters/obi-wan_kenobi.html
@@ -16,7 +16,7 @@
 
   <body>
     <header>
-      <iframe src="../header.html" frameborder="0"></iframe>
+      <iframe src="../../views/header.html" frameborder="0"></iframe>
     </header>
     <main>
       <div class="container">
@@ -135,7 +135,7 @@
       </div>
     </main>
     <footer>
-      <iframe src="../footer.html" frameborder="0"></iframe>
+      <iframe src="../../views/footer.html" frameborder="0"></iframe>
     </footer>
   </body>
 </html>
