--- a/views/characters/taun_we.html
+++ b/views/characters/taun_we.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <iframe src="../header.html" frameborder="0"></iframe>
+        <iframe src="../../views/header.html" frameborder="0"></iframe>
     </header>
     <main>
         <div class="container">
@@ -69,7 +69,7 @@
             </div>
     </main>
     <footer>
-        <iframe src="../footer.html" frameborder="0"></iframe>
+        <iframe src="../../views/footer.html" frameborder="0"></iframe>
     </footer>
 </body>
 
