--- a/views/characters/boss_nass.html
+++ b/views/characters/boss_nass.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <iframe src="../ressources/header.html" frameborder="0"></iframe>
+      <iframe src="../../views/header.html" frameborder="0"></iframe>
     </header>
     <main>
       <div class="container">
@@ -130,7 +130,7 @@
       </div>
     </main>
     <footer>
-      <iframe src="../ressources/footer.html" frameborder="0"></iframe>
+      <iframe src="../../views/footer.html" frameborder="0"></iframe>
     </footer>
   </body>
 </html>
