--- a/views/characters/jar_jar_bink.html
+++ b/views/characters/jar_jar_bink.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <iframe src="../ressources/header.html" frameborder="0"></iframe>
+        <iframe src="../../views/header.html" frameborder="0"></iframe>
     </header>
     <main>
         <div class="container">
@@ -78,7 +78,7 @@
         </div>
     </main>
     <footer>
-        <iframe src="../ressources/footer.html" frameborder="0"></iframe>
+        <iframe src="../../views/footer.html" frameborder="0"></iframe>
     </footer>
 </body>
 
