--- a/views/characters/mace_windu.html
+++ b/views/characters/mace_windu.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<iframe src="../header.html" frameborder="0"></iframe>
+			<iframe src="../../views/header.html" frameborder="0"></iframe>
 		</header>
 		<main>
 			<div class="container">
@@ -70,7 +70,7 @@
 			</div>
 		</main>
 		<footer>
-			<iframe src="../footer.html" frameborder="0"></iframe>
+			<iframe src="../../views/footer.html" frameborder="0"></iframe>
 		</footer>
 	</body>
 </html>
