--- a/views/characters/nute_gunray.html
+++ b/views/characters/nute_gunray.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <iframe src="../ressources/header.html" frameborder="0"></iframe>
+      <iframe src="../../views/header.html" frameborder="0"></iframe>
     </header>
     <main>
       <div class="container">
@@ -144,7 +144,7 @@
       </div>
     </main>
     <footer>
-      <iframe src="../ressources/footer.html" frameborder="0"></iframe>
+      <iframe src="../../views/footer.html" frameborder="0"></iframe>
     </footer>
   </body>
 </html>
