--- a/views/characters/tarrful.html
+++ b/views/characters/tarrful.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <iframe src="../header.html" frameborder="0"></iframe>
+      <iframe src="../../views/header.html" frameborder="0"></iframe>
     </header>
     <main>
       <div class="container">
@@ -142,7 +142,7 @@
       </div>
     </main>
     <footer>
-      <iframe src="../footer.html" frameborder="0"></iframe>
+      <iframe src="../../views/footer.html" frameborder="0"></iframe>
     </footer>
   </body>
 </html>
