--- a/views/characters/yoda.html
+++ b/views/characters/yoda.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header>
-		<iframe src="../ressources/header.html" frameborder="0"></iframe>
+		<iframe src="../../views/header.html" frameborder="0"></iframe>
 	</header>
 	<main>
 		<div class="container">
@@ -85,7 +85,7 @@
 		</div>
 	</main>
 	<footer>
-		<iframe src="../ressources/footer.html" frameborder="0"></iframe>
+		<iframe src="../../views/footer.html" frameborder="0"></iframe>
 	</footer>
 </body>
 
