fix movie iframe size

--- a/views/movies/movie3.html
+++ b/views/movies/movie3.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<iframe src="../../views/header.html" frameborder="0"></iframe>
+			<iframe src="../header.html" frameborder="0"></iframe>
 		</header>
 		<main>
 			<div class="container">
@@ -56,7 +56,7 @@
 			</div>
 		</main>
 		<footer>
-			<iframe src="../../views/footer.html" frameborder="0"></iframe>
+			<iframe src="../footer.html" frameborder="0"></iframe>
 		</footer>
 	</body>
 </html>
