--- a/views/index.html
+++ b/views/index.html
@@ -1,29 +1,65 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Accueil Star Wars</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../css/styles.css'>
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="../../stylemovie.css"
+    />
+  </head>
+  <body>
     <header>
-        <iframe src="../views/header.html" frameborder="0"></iframe>
+      <iframe src="../views/header.html" frameborder="0"></iframe>
     </header>
-    <main class="accueil">
+    <main>
+        <div class="indexfilm">
+      <h1>Star Wars Préquelle</h1>
+      <p>
+        L'univers de Star Wars se déroule dans une galaxie qui est le théâtre
+        d'affrontements entre les Chevaliers Jedi et les Seigneurs noirs des
+        Sith, personnes sensibles à la Force, un champ énergétique mystérieux
+        leur procurant des pouvoirs psychiques. Les Jedi maîtrisent le Côté
+        lumineux de la Force, pouvoir bénéfique et défensif, pour maintenir la
+        paix dans la galaxie. Les Sith utilisent le Côté obscur, pouvoir
+        nuisible et destructeur, pour leurs usages personnels et pour dominer la
+        galaxie. Depuis le rachat de la société Lucasfilm par The Walt Disney
+        Company, il existe deux univers Star Wars : le « Légendes » et l'«
+        Officiel ». Ils ont pour point commun, les six premiers films et la
+        série télévisée The Clone Wars. L'univers Légendes reprend en plus les
+        histoires complémentaires présentées dans des livres, des bandes
+        dessinées, des téléfilms ou des jeux sortis avant 2014. L'univers
+        Officiel reprend lui, les histoires des films et des autres supports
+        parus depuis 2014.
+      </p>
+    </div>
+      <div class="accueil">
         <div class="left">
-            <a href="movies/movie1.html" class="lien"> <img class="film" src="../images/movies/poster1.jpg"/>Film 1: La Menace Fantôme</a>
-        </a></div>
-        <div class="center">
-            <a href="movies/movie2.html" class="lien"><img class="film" src="../images/movies/poster2.jpg"/>Film 2: L'attaque des clones</a>
-        </a></div>
-        <div class="right">
-            <a href="movies/movie3.html" class="lien"><img class="film" src="../images/movies/poster3.jpg"/>Film 3: La Revanche des Siths</a>
+          <a href="movies/movie1.html" class="lien">
+            <img class="film" src="../images/movies/poster1.jpg" /><p>Film 1: La
+            Menace Fantôme</p></a
+          >
         </div>
+        <div class="center">
+          <a href="movies/movie2.html" class="lien"
+            ><img class="film" src="../images/movies/poster2.jpg" /><p>Film 2:
+            L'attaque des clones</p></a
+          >
+        </div>
+        <div class="right">
+          <a href="movies/movie3.html" class="lien"
+            ><img class="film" src="../images/movies/poster3.jpg" /><p>Film 3: La
+            Revanche des Siths</p></a
+          >
+        </div>
+      </div>
     </main>
     <footer>
-        <iframe src="../views/footer.html" frameborder="0"></iframe>
+      <iframe src="../views/footer.html" frameborder="0"></iframe>
     </footer>
-</body>
+  </body>
 </html>
