--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="../../stylemovie.css"
+      href="../css/indexfilms.css"
     />
   </head>
   <body>
@@ -17,44 +17,47 @@
       <iframe src="../views/header.html" frameborder="0"></iframe>
     </header>
     <main>
+      <div class="container">
         <div class="indexfilm">
-      <h1>Star Wars Préquelle</h1>
-      <p>
-        L'univers de Star Wars se déroule dans une galaxie qui est le théâtre
-        d'affrontements entre les Chevaliers Jedi et les Seigneurs noirs des
-        Sith, personnes sensibles à la Force, un champ énergétique mystérieux
-        leur procurant des pouvoirs psychiques. Les Jedi maîtrisent le Côté
-        lumineux de la Force, pouvoir bénéfique et défensif, pour maintenir la
-        paix dans la galaxie. Les Sith utilisent le Côté obscur, pouvoir
-        nuisible et destructeur, pour leurs usages personnels et pour dominer la
-        galaxie. Depuis le rachat de la société Lucasfilm par The Walt Disney
-        Company, il existe deux univers Star Wars : le « Légendes » et l'«
-        Officiel ». Ils ont pour point commun, les six premiers films et la
-        série télévisée The Clone Wars. L'univers Légendes reprend en plus les
-        histoires complémentaires présentées dans des livres, des bandes
-        dessinées, des téléfilms ou des jeux sortis avant 2014. L'univers
-        Officiel reprend lui, les histoires des films et des autres supports
-        parus depuis 2014.
-      </p>
-    </div>
-      <div class="accueil">
-        <div class="left">
-          <a href="movies/movie1.html" class="lien">
-            <img class="film" src="../images/movies/poster1.jpg" /><p>Film 1: La
-            Menace Fantôme</p></a
-          >
+          <h1>Star Wars Préquelle</h1>
+          <p>
+            L'univers de Star Wars se déroule dans une galaxie qui est le
+            théâtre d'affrontements entre les Chevaliers Jedi et les Seigneurs
+            noirs des Sith, personnes sensibles à la Force, un champ énergétique
+            mystérieux leur procurant des pouvoirs psychiques. Les Jedi
+            maîtrisent le Côté lumineux de la Force, pouvoir bénéfique et
+            défensif, pour maintenir la paix dans la galaxie. Les Sith utilisent
+            le Côté obscur, pouvoir nuisible et destructeur, pour leurs usages
+            personnels et pour dominer la galaxie. Depuis le rachat de la
+            société Lucasfilm par The Walt Disney Company, il existe deux
+            univers Star Wars : le « Légendes » et l'« Officiel ». Ils ont pour
+            point commun, les six premiers films et la série télévisée The Clone
+            Wars. L'univers Légendes reprend en plus les histoires
+            complémentaires présentées dans des livres, des bandes dessinées,
+            des téléfilms ou des jeux sortis avant 2014. L'univers Officiel
+            reprend lui, les histoires des films et des autres supports parus
+            depuis 2014.
+          </p>
         </div>
-        <div class="center">
-          <a href="movies/movie2.html" class="lien"
-            ><img class="film" src="../images/movies/poster2.jpg" /><p>Film 2:
-            L'attaque des clones</p></a
-          >
-        </div>
-        <div class="right">
-          <a href="movies/movie3.html" class="lien"
-            ><img class="film" src="../images/movies/poster3.jpg" /><p>Film 3: La
-            Revanche des Siths</p></a
-          >
+        <div class="accueil">
+          <div class="left">
+            <a href="movies/movie1.html" class="lien">
+              <img class="film" src="../images/movies/poster1.jpg" />
+              <p>Film 1: La Menace Fantôme</p></a
+            >
+          </div>
+          <div class="center">
+            <a href="movies/movie2.html" class="lien"
+              ><img class="film" src="../images/movies/poster2.jpg" />
+              <p>Film 2: L'attaque des clones</p></a
+            >
+          </div>
+          <div class="right">
+            <a href="movies/movie3.html" class="lien"
+              ><img class="film" src="../images/movies/poster3.jpg" />
+              <p>Film 3: La Revanche des Siths</p></a
+            >
+          </div>
         </div>
       </div>
     </main>
