--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -14,7 +14,11 @@
         <iframe src="../../views/header.html" frameborder="0"></iframe>
     </header>
 
-
+<main>
+    <div class="container">
+        
+    </div>
+</main>
     <h1>Les personnages de la trilogie</h1>
 <h2>Personnages récurrent de la trilogie</h2>
     <div class="list">
