MM updated CSS movies html

--- a/css/stylemovie.css
+++ b/css/stylemovie.css
@@ -1,14 +1,55 @@
-.movie {
-    width:1145;
-    height: 581;
-    display: flex;
-    text-align: justify;
-    align-items: center;
+body {
+background-image:url(../images/background/starrysky.jpg)
 
+}
+
+.container {
+margin-left: 10%;
+margin-right:10%;
+color: white;
+}
+
+a:link {
+    text-decoration: none;
+    color:#d8d3a2   ;
+}
+
+a:visited {
+    text-decoration: none;
+    color:#B8B8B8;
+}
+
+.movie {
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .poster {
-    
+display:inline-block;
+width:35%;
+text-align: center;
 }
 
-.synopsis
+.poster h1 {
+    text-align: center;
+}
+
+.poster img {
+    width:100%;
+}
+
+.synopsis {
+display:inline-block;
+width:45%;
+text-align: justify;
+}
+
+.synopsis h2 {
+    text-align: center;
+}
+
+.trailer {
+    padding-bottom: 10%;
+    padding-top:10%;
+}
