--- a/views/movies/movie1.html
+++ b/views/movies/movie1.html
@@ -41,8 +41,7 @@
 
 				<div class="trailer">
 					<iframe
-						width="900"
-						height="506"
+						width="1000" height="650" 
 						src="https://www.youtube.com/embed/G9e3R-vkj_A"
 						title="Star Wars : La Menace fantôme – Episode I - Bande Annonce VF – 1999"
 						frameborder="0"
