ec : correction global

--- a/views/characters/chewbacca.html
+++ b/views/characters/chewbacca.html
@@ -29,7 +29,8 @@
 							<tr>
 								<th>Apparaît dans :</th>
 								<td>
-									<a href="../movies/movie3.html">La Revanche des Sith</a>, Solo, Un nouvel espoir, L'Empire contre-attaque, Le Retour du Jedi, Le Réveil de la Force, Les Derniers Jedi, L'Ascension de Skywalker
+									<a href="../movies/movie3.html">La Revanche des Sith</a>, Solo, Un nouvel espoir, L'Empire contre-attaque, Le Retour du Jedi, Le Réveil de la Force, Les Derniers Jedi, L'Ascension de
+									Skywalker
 								</td>
 							</tr>
 							<tr>
@@ -68,10 +69,15 @@
 					<h2>Rôle dans l'histoire</h2>
 					<img src="../../images/movies/poster3.jpg" alt="" />
 					<p>
-						Chewbacca apparaît dans le 22e épisode de la troisième saison de la série Star Wars: <a href="../movies/movie2.html">L'Attaque des Clones</a>. Il a été enlevé et rejeté sur une planète forestière, pour y être chassé, par des chasseurs trandoshans aux côtés d'Ahsoka Tano et de deux autres jeunes <a href="../corporations/jedi.html">Jedi</a>, qui parviennent d'ailleurs à triompher de leurs poursuivants grâce à la grande force physique du Wookiee et grâce à l'émetteur construit par celui-ci afin de contacter <a href="../planets/kashyyk.html">Kashyyyk</a>. Les Wookiees vinrent secourir Chewbacca et les padawans. Ensuite, Chewbacca rencontre pour la première fois des Chevaliers Jedi (Plo Koon, <a href="../characters/anakin_skywalker.html">Anakin Skywalker</a> et <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a>) pour leur ramener les padawans.
+						Chewbacca apparaît dans le 22e épisode de la troisième saison de la série Star Wars: <a href="../movies/movie2.html">L'Attaque des Clones</a>. Il a été enlevé et rejeté sur une planète
+						forestière, pour y être chassé, par des chasseurs trandoshans aux côtés d'Ahsoka Tano et de deux autres jeunes <a href="../corporations/jedi.html">Jedi</a>, qui parviennent d'ailleurs à
+						triompher de leurs poursuivants grâce à la grande force physique du Wookiee et grâce à l'émetteur construit par celui-ci afin de contacter <a href="../planets/kashyyk.html">Kashyyyk</a>.
+						Les Wookiees vinrent secourir Chewbacca et les padawans. Ensuite, Chewbacca rencontre pour la première fois des Chevaliers Jedi (Plo Koon,
+						<a href="../characters/anakin_skywalker.html">Anakin Skywalker</a> et <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a>) pour leur ramener les padawans.
 					</p>
 					<p>
-						En compagnie de <a href="../characters/tarrful.html">Tarfful</a>, Chewbacca aide <a href="../characters/yoda.html">Yoda</a>, Luminara Unduli et sa légion, la 41e, dans la défense de Kashyyyk. Il permet également Yoda à s'enfuir lorsque <a href="../characters/palpatine.html">Dark Sidious</a> ordonne l'élimination de tous les Jedi.
+						En compagnie de <a href="../characters/tarrful.html">Tarfful</a>, Chewbacca aide <a href="../characters/yoda.html">Yoda</a>, Luminara Unduli et sa légion, la 41e, dans la défense de
+						Kashyyyk. Il permet également Yoda à s'enfuir lorsque <a href="../characters/palpatine.html">Dark Sidious</a> ordonne l'élimination de tous les Jedi.
 					</p>
 					<p></p>
 				</div>
