--- a/views/corporations/conseil_separatiste.html
+++ b/views/corporations/conseil_separatiste.html
@@ -16,12 +16,14 @@
 					<div class="histoire">
 						<h1>Le Conseil Séparatiste</h1>
 						<p>
-							Le Conseil Séparatiste (ou Conseil Exécutif Séparatiste), était une organisation gouvernementale de la <a href="../corporations/conseil_separatiste.html">Confédération des Systèmes Indépendants (CSI)</a>. Formé durant les derniers jours de
-							la Crise Séparatiste, le Conseil était composé des représentants des entreprises et organisations politiques soutenant la cause séparatiste, à savoir, l'Alliance des Corporations, le
-							Cartel des Hypercommunications, les Chantiers de Pammant, le Clan Bancaire Intergalactique, le Corps des Ingénieurs Volontaires Libres de Dac, la <a href="../corporations/federation_du_commerce.html">Fédération du commerce</a>, la Guilde du
-							Commerce, la Ligue d'Isolation Quarren et le Techno-Syndicat. Les responsabilités des conseillers étaient variées et allaient de la gestion d'opérations militaires à des missions
-							diplomatiques. Alors que la Guerre des Clones tournait à l'avantage de la <a href="../corporations/empire_galactique.html">République Galactique</a>, le <a href="../corporations/conseil_separatiste.html">Conseil Exécutif Séparatiste</a> se réfugia sur <a href="../planets/mustafar.html">Mustafar</a> où il fut massacré par <a href="../characters/anakin_skywalker.html">Dark
-							Vador</a>. La mort des conseillers séparatistes marqua la fin de la guerre et de la Confédération des Systèmes Indépendants.
+							Le Conseil Séparatiste (ou Conseil Exécutif Séparatiste), était une organisation gouvernementale de la
+							<a href="../corporations/conseil_separatiste.html">Confédération des Systèmes Indépendants (CSI)</a>. Formé durant les derniers jours de la Crise Séparatiste, le Conseil était composé
+							des représentants des entreprises et organisations politiques soutenant la cause séparatiste, à savoir, l'Alliance des Corporations, le Cartel des Hypercommunications, les Chantiers de
+							Pammant, le Clan Bancaire Intergalactique, le Corps des Ingénieurs Volontaires Libres de Dac, la <a href="../corporations/federation_du_commerce.html">Fédération du commerce</a>, la
+							Guilde du Commerce, la Ligue d'Isolation Quarren et le Techno-Syndicat. Les responsabilités des conseillers étaient variées et allaient de la gestion d'opérations militaires à des
+							missions diplomatiques. Alors que la Guerre des Clones tournait à l'avantage de la <a href="../corporations/empire_galactique.html">République Galactique</a>, le
+							<a href="../corporations/conseil_separatiste.html">Conseil Exécutif Séparatiste</a> se réfugia sur <a href="../planets/mustafar.html">Mustafar</a> où il fut massacré par
+							<a href="../characters/anakin_skywalker.html">Dark Vador</a>. La mort des conseillers séparatistes marqua la fin de la guerre et de la Confédération des Systèmes Indépendants.
 						</p>
 					</div>
 					<div class="presentoir">
