--- a/views/forms/connexion.html
+++ b/views/forms/connexion.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../../css/styles.css" />
+		<title>conection</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/styles.css" />
-    <title>conection</title>
-</head>
+	<body>
+		<header>
+			<iframe src="../../views/header.html" frameborder="0"></iframe>
+		</header>
 
-<body>
-    <header>
-        <iframe src="../../views/header.html" frameborder="0"></iframe>
-    </header>
-    
-    <h1>Connexion</h1>
+		<h1>Connexion</h1>
 
-    <div class="container">
-        <div class="connect ">
-            <h1>Connexion</h1>
-            <form id="logging">
-                <label for="enom">Email <input type="email" name="enom" id="euser"></label>
-                <label label="pass">Password<input type="password" name="pass" id="password"></label>
-                <input type="submit" class="submit" value="Envoyer">
-                <a href="#">Mot de passe oublié ?</a>
-            </form>
-
-
-        </div>
-    </div>
-    <footer>
-        <iframe src="../../views/footer.html" frameborder="0"></iframe>
-    </footer>
-
-</body>
-
+		<div class="container">
+			<div class="connect">
+				<h1>Connexion</h1>
+				<form id="logging">
+					<label for="enom">Email <input type="email" name="enom" id="euser" /></label>
+					<label label="pass">Password<input type="password" name="pass" id="password" /></label>
+					<input type="submit" class="submit" value="Envoyer" />
+					<a href="#">Mot de passe oublié ?</a>
+				</form>
+			</div>
+		</div>
+		<footer>
+			<iframe src="../../views/footer.html" frameborder="0"></iframe>
+		</footer>
+	</body>
 </html>
