--- a/views/planets/geonosis.html
+++ b/views/planets/geonosis.html
@@ -16,18 +16,21 @@
 				<div class="presentation">
 					<div class="histoire">
 						<h1>Géonosis</h1>
-						<p> Orbitant autour de l'étoile Ea, Géonosis est l'une des six planètes du système qui porte son nom. Le système de Géonosis est compris dans le secteur Arkanis, lui-même situé dans la Bordure extérieure. Bien qu'étant une planète tellurique, elle a la particularité d'être entourée d'un anneau d'astéroïdes. La surface de Géonosis est recouverte de plaines désertiques rocailleuses et de montagnes. Son ciel est, à l'instar du sol, rouge.
-                       </p>
+						<p>
+							Orbitant autour de l'étoile Ea, Géonosis est l'une des six planètes du système qui porte son nom. Le système de Géonosis est compris dans le secteur Arkanis, lui-même situé dans la
+							Bordure extérieure. Bien qu'étant une planète tellurique, elle a la particularité d'être entourée d'un anneau d'astéroïdes. La surface de Géonosis est recouverte de plaines désertiques
+							rocailleuses et de montagnes. Son ciel est, à l'instar du sol, rouge.
+						</p>
 					</div>
 					<div class="presentoir">
 						<img src="../../images/planets/geonosis.jpg" alt="" />
 						<table>
 							<tr>
-								<th>Apparaît dans :  </th>
-								<td> <a href="../movies/movie2.html">L'Attaque des clones</a></td>
+								<th>Apparaît dans :</th>
+								<td><a href="../movies/movie2.html">L'Attaque des clones</a></td>
 							</tr>
 							<tr>
-								<th>Environnement : </th>
+								<th>Environnement :</th>
 								<td>Bordure extérieure planète-désert</td>
 							</tr>
 						</table>
