--- a/views/planets/tatooine.html
+++ b/views/planets/tatooine.html
@@ -26,9 +26,7 @@
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>	
-									<a href="../movies/movie1.html">La Menace fantôme</a>, <a href="../movies/movie2.html">L'Attaque des clones</a>, <a href="../movies/movie3.html">La Revanche des Sith</a>
-								</td>
+								<td><a href="../movies/movie1.html">La Menace fantôme</a>, <a href="../movies/movie2.html">L'Attaque des clones</a>, <a href="../movies/movie3.html">La Revanche des Sith</a></td>
 							</tr>
 							<tr>
 								<th>Environnement :</th>
