--- a/views/characters/general_grievous.html
+++ b/views/characters/general_grievous.html
@@ -17,8 +17,10 @@
 					<div class="histoire">
 						<h1>Gregar Typho</h1>
 						<p>
-							Gregar Typho est le neveu du capitaine <a href="../characters/panaka.html">Panaka</a> et le garde du corps de la sénatrice <a href="../characters/padme_amidala.html">Padmé Amidala</a>, dont il était fou amoureux, mais il n'a jamais eu l'occasion de le lui avouer. Parvenu à
-							son poste grâce à son indéfectible loyauté envers son oncle, Typho est un novice dans cet environnement dangereux, dont les représentants galactiques du <a href="../corporations/senat_galactique.html">Sénat Galactique</a> sont, eux, familiers. Typho a perdu un œil dans l'exercice de ses fonctions.
+							Gregar Typho est le neveu du capitaine <a href="../characters/panaka.html">Panaka</a> et le garde du corps de la sénatrice <a href="../characters/padme_amidala.html">Padmé Amidala</a>,
+							dont il était fou amoureux, mais il n'a jamais eu l'occasion de le lui avouer. Parvenu à son poste grâce à son indéfectible loyauté envers son oncle, Typho est un novice dans cet
+							environnement dangereux, dont les représentants galactiques du <a href="../corporations/senat_galactique.html">Sénat Galactique</a> sont, eux, familiers. Typho a perdu un œil dans
+							l'exercice de ses fonctions.
 						</p>
 					</div>
 					<div class="presentoir">
@@ -64,9 +66,11 @@
 					<h2>Rôle dans l'histoire</h2>
 					<img src="../../images/movies/poster2.jpg" alt="" />
 					<p>
-						En 19 av.BY, il décida de retrouver le tueur de <a href="../characters/padme_amidala.html">Padmé Amidala</a>, et de la venger. Il découvrit que le tueur était <a href="../characters/anakin_skywalker.html">Dark Vador</a>. Il réussit à savoir que le Seigneur <a href="../corporations/sith.html">Sith</a> cherchait le <a href="../corporations/jedi.html">Jedi</a> Jax
-						Pavan à tout prix, plus que les autres Jedi survivants. Il acheta une amulette, qui permettait de se dissimuler de la Force. Il prit contact, déguisé, avec Dark Vador, qui, comme prévu, ne
-						put le sonder. <a href="../characters/gregar_typho.html">Gregar</a> lui dit qu'il savait où était Jax Pavan, et que, s'il venait au point de rendez-vous sans arme ni soldat, il le lui livrerait.
+						En 19 av.BY, il décida de retrouver le tueur de <a href="../characters/padme_amidala.html">Padmé Amidala</a>, et de la venger. Il découvrit que le tueur était
+						<a href="../characters/anakin_skywalker.html">Dark Vador</a>. Il réussit à savoir que le Seigneur <a href="../corporations/sith.html">Sith</a> cherchait le
+						<a href="../corporations/jedi.html">Jedi</a> Jax Pavan à tout prix, plus que les autres Jedi survivants. Il acheta une amulette, qui permettait de se dissimuler de la Force. Il prit
+						contact, déguisé, avec Dark Vador, qui, comme prévu, ne put le sonder. <a href="../characters/gregar_typho.html">Gregar</a> lui dit qu'il savait où était Jax Pavan, et que, s'il venait au
+						point de rendez-vous sans arme ni soldat, il le lui livrerait.
 					</p>
 					<p>
 						Comme prévu, Dark Vador arriva seul et non-armé au point de rendez-vous. Evidemment, Gregar n'était pas venu avec Jax Pavan. Il attaqua Vador, mais fut projeté par la Force contre le mur.
