--- a/views/corporations/haut_conseil_gungan.html
+++ b/views/corporations/haut_conseil_gungan.html
@@ -16,10 +16,11 @@
 					<div class="histoire">
 						<h1>Le Haut Conseil Gungan</h1>
 						<p>
-							Le Haut Conseil Gungan, également appelé le Conseil des Reps, était le corps gouvernant du peuple Gungan sur la <a href="../planets/naboo.html">planète Naboo</a>. Il se trouvait dans la Salle du Conseil Gungan où était
-							installé le <a href="../characters/boss_nass.html">Boss Rugor Nass</a> du temps de l'Invasion de <a href="../planets/naboo.html">Naboo</a> et le Boss Lyonie durant la Guerre des Clones. Les membres du conseil étaient choisis parmi une multitude de candidats,
-							certains étaient choisis par le Boss lui-même. Les élus débattaient ensemble de questions importantes concernant la gestion de la capitale, la cité sous-marine d'Otoh Gunga, et de
-							l'organisation de la société. L'assemblée résidait dans la Haute Tour, une bulle aménagée en salle de conférence et protégée par des soldats de la Grande Armée Gungan.
+							Le Haut Conseil Gungan, également appelé le Conseil des Reps, était le corps gouvernant du peuple Gungan sur la <a href="../planets/naboo.html">planète Naboo</a>. Il se trouvait dans la
+							Salle du Conseil Gungan où était installé le <a href="../characters/boss_nass.html">Boss Rugor Nass</a> du temps de l'Invasion de <a href="../planets/naboo.html">Naboo</a> et le Boss
+							Lyonie durant la Guerre des Clones. Les membres du conseil étaient choisis parmi une multitude de candidats, certains étaient choisis par le Boss lui-même. Les élus débattaient ensemble
+							de questions importantes concernant la gestion de la capitale, la cité sous-marine d'Otoh Gunga, et de l'organisation de la société. L'assemblée résidait dans la Haute Tour, une bulle
+							aménagée en salle de conférence et protégée par des soldats de la Grande Armée Gungan.
 						</p>
 					</div>
 					<div class="presentoir">
