--- a/views/forms/contact.html
+++ b/views/forms/contact.html
@@ -1,50 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../../css/styles.css" />
+		<title>Contact</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/styles.css" />
-    <title>Contact</title>
-</head>
+	<body>
+		<header>
+			<iframe src="../../views/header.html" frameborder="0"></iframe>
+		</header>
 
-<body>
+		<div class="container">
+			<div class="contact">
+				<h1>Contact</h1>
+				<form id="contacts">
+					<label for="cnom"
+						>Nom
+						<input type="text" name="cnom" id="enoms" />
+					</label>
 
-    <header>
-        <iframe src="../../views/header.html" frameborder="0"></iframe>
-    </header>
+					<label for="passe"
+						>Prénom
+						<input type="text" name="passe" id="passwords" />
+					</label>
 
-    <div class="container">
-        <div class="contact ">
-            <h1>Contact</h1>
-            <form id="contacts">
-               
-                <label for="cnom">Nom
-                    <input type="text" name="cnom" id="enoms">
-                </label>
+					<label for="mailcontact"
+						>Email
+						<input type="email" name="mailcontact" id="euser" />
+					</label>
 
-                <label for="passe">Prénom
-                    <input type="text" name="passe" id="passwords">
-                </label>
-
-                <label for="mailcontact">Email
-                    <input type="email" name="mailcontact" id="euser">
-                </label>
-
-                <label for="remarque">Remarques:
-                <textarea name="remarque" id="remarques" rows="4" cols="30">
-                </textarea>
-</label>
-                <label for="envoyer"><input type="submit" class="submit" name="remarque" value="envoyer">
-                </label>
-
-            </form>
-        </div>
-    </div>
-    <footer>
-        <iframe src="../../views/footer.html" frameborder="0"></iframe>
-    </footer>
-</body>
-
+					<label for="remarque"
+						>Remarques:
+						<textarea name="remarque" id="remarques" rows="4" cols="30"> </textarea>
+					</label>
+					<label for="envoyer"><input type="submit" class="submit" name="remarque" value="envoyer" /> </label>
+				</form>
+			</div>
+		</div>
+		<footer>
+			<iframe src="../../views/footer.html" frameborder="0"></iframe>
+		</footer>
+	</body>
 </html>
