--- a/views/forms/inscription.html
+++ b/views/forms/inscription.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Formulaire d'inscription</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../../css/styles.css'>
-</head>
-<body>
-    <header>
-        <iframe src="../../views/header.html" frameborder="0"></iframe>
-    </header>
-    <h1>Formulaire d'inscription</h1>
-    <div class="container">
-        <div class="inscrire">
-            <h1>Vos informations:</h1>
-            <form id="compte">
-                <div class="np">
-                    <label>NOM:<input type="text" name="nameu" id="nameu"></label>
-                    <label>Prénom:<input type="text" name="fnameu" id="fnameu"></label>
-                </div>
-                <div class="middle">
-                    <label>Date de Naissance:<input type="date" name="datenais" id="birth"></label><br />
-                    <label>Email:<input type="email" name="mailu" id="mailu"></label><br />
-                </div>
-                <div class="password">
-                    <label>Mot de Passe:<input type="password" name="pass" id="password"></label>
-                    <label>Confirmer Mot de Passe:<input type="password" name="pass" id="password"></label>
-                </div>
-                <button type="submit" name="inscrire">Envoyer ces informations</button>
-            </form>
-        </div>
-    </div>
-    <footer>
-        <iframe src="../../views/footer.html" frameborder="0"></iframe>
-    </footer>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="../../css/styles.css" />
+        <title>Formulaire d'inscription</title>
+	</head>
+	<body>
+		<header>
+			<iframe src="../../views/header.html" frameborder="0"></iframe>
+		</header>
+		<h1>Formulaire d'inscription</h1>
+		<div class="container">
+			<div class="inscrire">
+				<h1>Vos informations:</h1>
+				<form id="compte">
+					<div class="np">
+						<label>NOM:<input type="text" name="nameu" id="nameu" /></label>
+						<label>Prénom:<input type="text" name="fnameu" id="fnameu" /></label>
+					</div>
+					<div class="middle">
+						<label>Date de Naissance:<input type="date" name="datenais" id="birth" /></label><br />
+						<label>Email:<input type="email" name="mailu" id="mailu" /></label><br />
+					</div>
+					<div class="password">
+						<label>Mot de Passe:<input type="password" name="pass" id="password" /></label>
+						<label>Confirmer Mot de Passe:<input type="password" name="pass" id="password" /></label>
+					</div>
+					<button type="submit" name="inscrire">Envoyer ces informations</button>
+				</form>
+			</div>
+		</div>
+		<footer>
+			<iframe src="../../views/footer.html" frameborder="0"></iframe>
+		</footer>
+	</body>
 </html>
