--- a/views/movies/movie1.html
+++ b/views/movies/movie1.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../css/styles.css">
+		<link rel="stylesheet" href="../../css/styles.css" />
 		<link rel="stylesheet" href="../../css/stylemovie.css" />
 		<title>La Menace fantôme</title>
 	</head>
@@ -32,16 +32,18 @@
 						</p>
 
 						<p>
-							Le film suit le chevalier Jedi <a href="../characters/qui_gon_jinn.html">Qui-Gon Jinn</a> et son apprenti <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a> qui escortent et protègent la reine <a href="../characters/padme_amidala.html">Amidala</a> qui voyage de la planète <a href="../planets/naboo.html">Naboo</a> à la planète Coruscant dans l'espoir
-							de trouver une issue pacifique à un différend commercial interplanétaire. Il met également en scène le jeune <a href="../characters/anakin_skywalker.html">Anakin Skywalker</a> avant qu'il ne devienne un <a href="../corporations/jedi.html">Jedi</a>. Celui-ci est alors un jeune
-							esclave qui semble avoir une forte prédisposition à l'utilisation de la Force.
+							Le film suit le chevalier Jedi <a href="../characters/qui_gon_jinn.html">Qui-Gon Jinn</a> et son apprenti <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a> qui escortent et
+							protègent la reine <a href="../characters/padme_amidala.html">Amidala</a> qui voyage de la planète <a href="../planets/naboo.html">Naboo</a> à la planète Coruscant dans l'espoir de
+							trouver une issue pacifique à un différend commercial interplanétaire. Il met également en scène le jeune <a href="../characters/anakin_skywalker.html">Anakin Skywalker</a> avant qu'il
+							ne devienne un <a href="../corporations/jedi.html">Jedi</a>. Celui-ci est alors un jeune esclave qui semble avoir une forte prédisposition à l'utilisation de la Force.
 						</p>
 					</div>
 				</div>
 
 				<div class="trailer">
 					<iframe
-						width="1000" height="650" 
+						width="1000"
+						height="650"
 						src="https://www.youtube.com/embed/G9e3R-vkj_A"
 						title="Star Wars : La Menace fantôme – Episode I - Bande Annonce VF – 1999"
 						frameborder="0"
