--- a/views/movies/movie2.html
+++ b/views/movies/movie2.html
@@ -25,17 +25,21 @@
 							par George Lucas.
 						</p>
 						<p>
-							C'est le cinquième opus de la saga Star Wars par sa date de sortie, mais le deuxième dans l'ordre chronologique de l'histoire. Sorti trois ans après <a href="../movies/movie1.html">La Menace fantôme</a>, il est le deuxième
-							volet de la trilogie de préquelle, la « prélogie ». Le film est également la cinquième réalisation de Lucas.
+							C'est le cinquième opus de la saga Star Wars par sa date de sortie, mais le deuxième dans l'ordre chronologique de l'histoire. Sorti trois ans après
+							<a href="../movies/movie1.html">La Menace fantôme</a>, il est le deuxième volet de la trilogie de préquelle, la « prélogie ». Le film est également la cinquième réalisation de Lucas.
 						</p>
 						<p>
-							L'histoire de cet épisode se déroule dix ans après les événements de <a href="../movies/movie1.html">La Menace fantôme</a> alors que la galaxie est au bord de la guerre civile. Influencés par le maléfique comte <a href="../characters/compte_dooku.html">Dooku</a>, des
-							milliers de systèmes planétaires menacent de faire sécession de la <a href="../corporations/">République Galactique</a>. La principale opposante à ce projet, la sénatrice et ancienne reine <a href="../characters/padme_amidala.html">Padmé Amidala</a>, est visée par
-							une tentative d’assassinat et se voit affecter comme protecteur l'apprenti Jedi <a href="../characters/anakin_skywalker.html">Anakin Skywalker</a>. Leur histoire d'amour se développe et ils se marient en secret. Le mentor d' <a href="../characters/anakin_skywalker.html">Anakin</a>,
-							<a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a>, est, quant à lui, chargé de démasquer les responsables de l'attentat. <a href="../characters/obi-wan_kenobi.html">Obi-Wan</a> découvre sur la planète <a href="../planets/kamino.html">Kamino</a> un complexe où sont réalisés des dizaines de milliers de
-							clones du chasseur de primes <a href="../characters/jango_fett.html">Jango Fett</a>, qui en conserve un prénommé <a href="../characters/boba_fett.html">Boba</a> auprès de lui pour l'élever comme son fils. Les clones doivent constituer une armée, la commande émanant en
-							réalité du comte <a href="../characters/compte_dooku.html">Dooku</a>, si bien que leur allégeance à la <a href="../corporations/republique_galactique.html">République galactique</a> est sujette aux manipulations des <a href="../corporations/sith.html">Sith</a> qui complotent en secret, puisqu'ils contrôlent également l'armée de
-							droïdes opposée agissant pour l' <a href="../corporations/conseil_separatiste.html">Alliance séparatiste</a>.
+							L'histoire de cet épisode se déroule dix ans après les événements de <a href="../movies/movie1.html">La Menace fantôme</a> alors que la galaxie est au bord de la guerre civile.
+							Influencés par le maléfique comte <a href="../characters/compte_dooku.html">Dooku</a>, des milliers de systèmes planétaires menacent de faire sécession de la
+							<a href="../corporations/">République Galactique</a>. La principale opposante à ce projet, la sénatrice et ancienne reine <a href="../characters/padme_amidala.html">Padmé Amidala</a>,
+							est visée par une tentative d’assassinat et se voit affecter comme protecteur l'apprenti Jedi <a href="../characters/anakin_skywalker.html">Anakin Skywalker</a>. Leur histoire d'amour se
+							développe et ils se marient en secret. Le mentor d' <a href="../characters/anakin_skywalker.html">Anakin</a>, <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a>, est, quant à
+							lui, chargé de démasquer les responsables de l'attentat. <a href="../characters/obi-wan_kenobi.html">Obi-Wan</a> découvre sur la planète <a href="../planets/kamino.html">Kamino</a> un
+							complexe où sont réalisés des dizaines de milliers de clones du chasseur de primes <a href="../characters/jango_fett.html">Jango Fett</a>, qui en conserve un prénommé
+							<a href="../characters/boba_fett.html">Boba</a> auprès de lui pour l'élever comme son fils. Les clones doivent constituer une armée, la commande émanant en réalité du comte
+							<a href="../characters/compte_dooku.html">Dooku</a>, si bien que leur allégeance à la <a href="../corporations/republique_galactique.html">République galactique</a> est sujette aux
+							manipulations des <a href="../corporations/sith.html">Sith</a> qui complotent en secret, puisqu'ils contrôlent également l'armée de droïdes opposée agissant pour l'
+							<a href="../corporations/conseil_separatiste.html">Alliance séparatiste</a>.
 						</p>
 					</div>
 				</div>
