--- a/views/planets/mustafar.html
+++ b/views/planets/mustafar.html
@@ -16,8 +16,12 @@
 				<div class="presentation">
 					<div class="histoire">
 						<h1>Mustafar</h1>
-						<p>Mustafar est une planète de lave de l’univers de fiction Star Wars. Située dans la Bordure extérieure, cette petite planète orbite autour de l'étoile Priate. Elle est notamment célèbre pour être le lieu du premier affrontement entre Anakin Skywalker, devenu Sith sous le nom de Dark Vador, et son ancien maître Jedi Obi-Wan Kenobi.
-						Malgré son hostilité naturelle, elle est habitée par les Mustafariens et très prisée pour ses ressources minières par la Confédération des systèmes indépendants durant la guerre des clones, puis par l'Empire galactique. L'influence du côté obscur de la Force étant forte sur cette planète, Dark Vador y fait construire son château durant la période de domination de l'Empire.</p>
+						<p>
+							Mustafar est une planète de lave de l’univers de fiction Star Wars. Située dans la Bordure extérieure, cette petite planète orbite autour de l'étoile Priate. Elle est notamment célèbre
+							pour être le lieu du premier affrontement entre Anakin Skywalker, devenu Sith sous le nom de Dark Vador, et son ancien maître Jedi Obi-Wan Kenobi. Malgré son hostilité naturelle, elle
+							est habitée par les Mustafariens et très prisée pour ses ressources minières par la Confédération des systèmes indépendants durant la guerre des clones, puis par l'Empire galactique.
+							L'influence du côté obscur de la Force étant forte sur cette planète, Dark Vador y fait construire son château durant la période de domination de l'Empire.
+						</p>
 					</div>
 					<div class="presentoir">
 						<img src="../../images/planets/mustafar.jpg" alt="" />
