--- a/views/planets/index.html
+++ b/views/planets/index.html
@@ -12,7 +12,7 @@
 			<iframe src="../header.html" frameborder="0"></iframe>
 		</header>
 		<main>
-			<div class="maquette">
+			<div class="container">
 				<div class="alderaan">
 					<a href="../planets/alderaan.html"
 						><p>Alderaan</p>
