ec : css corpo&planete

--- a/views/corporations/index.html
+++ b/views/corporations/index.html
@@ -5,7 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../../css/styles.css" />
-		<title>Corporation</title>
+		<link rel="stylesheet" type="text/css" media="screen" href="../../css/planete&corpo.css" />
+		<title>Les corporations</title>
 	</head>
 
 	<body>
@@ -14,59 +15,70 @@
 		</header>
 		<main>
 			<div class="container">
-				<h1>Les corporations</h1>
-				<div class="card">
-					<h2>Le cartel hutt</h2>
-					<a href="cartel_hutt.html"><img src="../../images/corporations/cartelhutt.jpg" alt="" /></a>
-				</div>
+				<h1 class="title">Les corporations</h1>
+				<div class="list">
+					<div class="card">
+						<a href="cartel_hutt.html">
+							<h2>Le cartel hutt</h2>
+							<img src="../../images/corporations/cartelhutt.jpg" alt="" />
+						</a>
+					</div>
 
-				<div class="card">
-					<h2>Le conseil séparatiste</h2>
-					<a href="../../views/corporations/conseil_separatiste.html"><img src="../../images/corporations/conseil_separatiste.jpg" alt="" /></a>
-				</div>
+					<div class="card">
+						<a href="../../views/corporations/conseil_separatiste.html">
+							<h2>Le conseil séparatiste</h2>
+							<img src="../../images/corporations/conseil_separatiste.jpg" alt=""
+						/></a>
+					</div>
 
-				<div class="card">
-					<h2>L'empire galactique</h2>
-					<a href="../../views/corporations/empire_galactique.html"><img src="../../images/corporations/empire_galactique.jpg" alt="" /></a>
-				</div>
+					<div class="card">
+						<a href="../../views/corporations/empire_galactique.html">
+							<h2>L'empire galactique</h2>
+							<img src="../../images/corporations/empire_galactique.jpg" alt="" />
+						</a>
+					</div>
 
-				<div class="card">
-					<h2>La fédération du commerce</h2>
-					<a href="../../views/corporations/federation_du_commerce.html"><img src="../../images/corporations/federation_du_commerce.jpg" alt="" /></a>
-				</div>
+					<div class="card">
+						<a href="../../views/corporations/federation_du_commerce.html">
+							<h2>La fédération du commerce</h2>
+							<img src="../../images/corporations/federation_du_commerce.jpg" alt=""
+						/></a>
+					</div>
 
-				<div class="card">
-					<h2>Le haut conseil Gungan</h2>
-					<a href="../../views/corporations/haut_conseil_gungan.html">
-						<img src="../../images/corporations/haut_conseil_gungan.jpg" alt="" />
-					</a>
-				</div>
+					<div class="card">
+						<a href="../../views/corporations/haut_conseil_gungan.html">
+							<h2>Le haut conseil Gungan</h2>
+							<img src="../../images/corporations/haut_conseil_gungan.jpg" alt="" />
+						</a>
+					</div>
 
-				<div class="card">
-					<h2>L'ordre jedi</h2>
-					<a href="../../views/corporations/jedi.html">
-						<img src="../../images/corporations/jedi.jpg" alt="" />
-					</a>
-				</div>
+					<div class="card">
+						<a href="../../views/corporations/jedi.html">
+							<h2>L'ordre jedi</h2>
+							<img src="../../images/corporations/jedi.jpg" alt="" />
+						</a>
+					</div>
 
-				<div class="card">
-					<h2>République galactique</h2>
-					<a href="../../views/corporations/republique_galactique.html">
-						<img src="../../images/corporations/republique_galactique.jpg" alt="" />
-					</a>
-				</div>
+					<div class="card">
+						<a href="../../views/corporations/republique_galactique.html">
+							<h2>République galactique</h2>
+							<img src="../../images/corporations/republique_galactique.jpg" alt="" />
+						</a>
+					</div>
 
-				<div class="card">
-					<h2>Senat galactique</h2>
-					<a href="../../views/corporations/senat_galactique.html">
-						<img src="../../images/corporations/senat_galactique.jpg" alt="" />
-					</a>
-				</div>
+					<div class="card">
+						<a href="../../views/corporations/senat_galactique.html">
+							<h2>Senat galactique</h2>
+							<img src="../../images/corporations/senat_galactique.jpg" alt="" />
+						</a>
+					</div>
 
-				<div class="card">
-					<a href="../../views/corporations/sith.html">
-						<img src="../../images/corporations/siths.jpg" alt="" />
-					</a>
+					<div class="card">
+						<a href="../../views/corporations/sith.html">
+							<h2>L’ordre Sith</h2>
+							<img src="../../images/corporations/siths.jpg" alt="" />
+						</a>
+					</div>
 				</div>
 			</div>
 		</main>
