--- a/views/planets/index.html
+++ b/views/planets/index.html
@@ -3,69 +3,73 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<title>Planètes</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" type="text/css" media="screen" href="../../css/styles.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="../../css/planete&corpo.css" />
+		<title>Les planètes</title>
 	</head>
 	<body>
 		<header>
 			<iframe src="../header.html" frameborder="0"></iframe>
 		</header>
 		<main>
+			<h1 class="title">Les planètes</h1>
 			<div class="container">
-				<div class="alderaan">
-					<a href="../planets/alderaan.html"
-						><p>Alderaan</p>
-						<img src="../../images/planets/alderaan.jpg"
-					/></a>
-				</div>
-				<div class="coruscant">
-					<a href="../planets/coruscant.html"
-						><p>Coruscant</p>
-						<img src="../../images/planets/coruscant.jpg"
-					/></a>
-				</div>
-				<div class="geonosis">
-					<a href="../planets/geonosis.html"
-						><p>Géonosis</p>
-						<img src="../../images/planets/geonosis.jpg"
-					/></a>
-				</div>
-				<div class="kamino">
-					<a href="../planets/kamino.html"
-						><p>Kamino</p>
-						<img src="../../images/planets/kamino.jpg"
-					/></a>
-				</div>
-				<div class="kashyyyk">
-					<a href="../planets/kashyyk.html"
-						><p>Kashyyyk</p>
-						<img src="../../images/planets/kashyyyk.jpg"
-					/></a>
-				</div>
-				<div class="mustafar">
-					<a href="../planets/mustafar.html"
-						><p>Mustafar</p>
-						<img src="../../images/planets/mustafar.jpg"
-					/></a>
-				</div>
-				<div class="naboo">
-					<a href="../planets/naboo.html"
-						><p>Naboo</p>
-						<img src="../../images/planets/naboo.jpg"
-					/></a>
-				</div>
-				<div class="tatooine">
-					<a href="../planets/tatooine.html"
-						><p>Tatooine</p>
-						<img src="../../images/planets/tatooine.jpg"
-					/></a>
-				</div>
-				<div class="utapau">
-					<a href="../planets/utapau.html"
-						><p>Utapau</p>
-						<img src="../../images/planets/utapau.jpg"
-					/></a>
+				<div class="list">
+					<div class="card alderaan">
+						<a href="../planets/alderaan.html">
+							<h2>Alderaan</h2>
+							<img src="../../images/planets/alderaan.jpg"
+						/></a>
+					</div>
+					<div class="card coruscant">
+						<a href="../planets/coruscant.html">
+							<h2>Coruscant</h2>
+							<img src="../../images/planets/coruscant.jpg"
+						/></a>
+					</div>
+					<div class="card geonosis">
+						<a href="../planets/geonosis.html">
+							<h2>Géonosis</h2>
+							<img src="../../images/planets/geonosis.jpg"
+						/></a>
+					</div>
+					<div class="card kamino">
+						<a href="../planets/kamino.html">
+							<h2>Kamino</h2>
+							<img src="../../images/planets/kamino.jpg"
+						/></a>
+					</div>
+					<div class="card kashyyyk">
+						<a href="../planets/kashyyk.html">
+							<h2>Kashyyyk</h2>
+							<img src="../../images/planets/kashyyyk.jpg"
+						/></a>
+					</div>
+					<div class="card mustafar">
+						<a href="../planets/mustafar.html">
+							<h2>Mustafar</h2>
+							<img src="../../images/planets/mustafar.jpg"
+						/></a>
+					</div>
+					<div class="card naboo">
+						<a href="../planets/naboo.html">
+							<h2>Naboo</h2>
+							<img src="../../images/planets/naboo.jpg"
+						/></a>
+					</div>
+					<div class="card tatooine">
+						<a href="../planets/tatooine.html">
+							<h2>Tatooine</h2>
+							<img src="../../images/planets/tatooine.jpg"
+						/></a>
+					</div>
+					<div class="card utapau">
+						<a href="../planets/utapau.html">
+							<h2>Utapau</h2>
+							<img src="../../images/planets/utapau.jpg"
+						/></a>
+					</div>
 				</div>
 			</div>
 		</main>
