--- a/views/corporations/index.html
+++ b/views/corporations/index.html
@@ -55,7 +55,7 @@
 					<div class="card">
 						<a href="../../views/corporations/jedi.html">
 							<h2>L'ordre jedi</h2>
-							<img src="../../images/corporations/jedi.jpg" alt="" />
+							<img class="bg-white" src="../../images/corporations/jedi.jpg" alt="" />
 						</a>
 					</div>
 
