--- a/views/header.html
+++ b/views/header.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
+		<link rel="stylesheet" href="../css/styles.css" />
 		<link rel="stylesheet" href="../css/header.css" />
 	</head>
 	<body>
