--- a/views/footer.html
+++ b/views/footer.html
@@ -14,7 +14,7 @@
 				<a href="forms/contact.html" target="_parent">Contact</a>
 			</div>
 			<div class="credit">
-				<p>@ 2022 MEVY - Created with passion faut mettre Fatal dans le footer</p>
+				<p>@ 2022 Fatal MEVY - Created with passion</p>
 			</div>
 		</footer>
 	</body>
