taille image perso

--- a/css/corpocss.css
+++ b/css/corpocss.css
@@ -34,7 +34,8 @@ h2 {
 
 .card {
     border: solid 2px yellow;
-    height: 142px;
-    width: 100px;
+    height: 160px;
+    width: 115px;
+}
 
 }
